cogl/cogl-private.h
@@ -27,18 +27,12 @@
 G_BEGIN_DECLS
 
 gboolean
-_cogl_gl_check_gl_version (CoglContext *context,
-                           GError **error);
-
-void
-_cogl_gl_update_features (CoglContext *context);
+_cogl_gl_update_features (CoglContext *context,
+                          GError **error);
 
 gboolean
-_cogl_gles_check_gl_version (CoglContext *context,
-                             GError **error);
-
-void
-_cogl_gles_update_features (CoglContext *context);
+_cogl_gles_update_features (CoglContext *context,
+                            GError **error);
 
 gboolean
 _cogl_check_extension (const char *name, const char *ext);
