cogl/winsys/cogl-winsys-stub.c
@@ -83,10 +83,8 @@ _cogl_winsys_context_init (CoglContext *context, GError **error)
 {
   context->winsys = &_cogl_winsys_stub_dummy_ptr;
 
-  if (!_cogl_context_check_gl_version (context, error))
+  if (!_cogl_context_update_features (context, error))
     return FALSE;
-
-  _cogl_context_update_features (context);
 
   memset (context->winsys_features, 0, sizeof (context->winsys_features));
 
